# odds-api

./: .gitignore  AGENTS.md  README.md  SECURITY.md  llms.txt  openapi.json  openapi.yaml  package-lock.json  package.json
.github/: labels.yml
.github/workflows/: ci.yml  python-publish.yml
agents/: AGENTS.md  CLAUDE.md  codex.md  copilot-instructions.md  cursor-rules.md
agents/codex-skill/: SKILL.md
docs/: README.md  discovery-maintenance.md  mcp.md  npm-publishing.md  pypi-publishing.md  starter-issues.md
docs/discovery-pages/: README.md  best-odds-api-for-coding-agents.md  build-arbitrage-scanner.md  build-positive-ev-scanner.md  compare-bookmaker-odds-api.md  openapi-sports-betting-odds-api.md  python-sports-odds-api-quickstart.md  sports-odds-api-with-mcp-server.md  track-line-movement-api.md  typescript-sports-odds-api-quickstart.md
examples/javascript/arbitrage-scanner/: README.md  index.mjs
examples/javascript/betting-dashboard/: README.md  index.mjs
examples/javascript/bookmaker-price-monitor/: README.md  index.mjs
examples/javascript/discord-bot/: README.md  index.mjs
examples/javascript/lib/: example-client.mjs
examples/javascript/line-movement-chart/: README.md  index.mjs
examples/javascript/odds-comparison-widget/: README.md  index.mjs
examples/javascript/positive-ev-scanner/: README.md  index.mjs
examples/javascript/telegram-bot/: README.md  index.mjs
examples/minimal-rest/curl/: README.md
examples/minimal-rest/javascript/: README.md  odds.mjs
examples/minimal-rest/python/: README.md  odds.py
examples/python/arbitrage-scanner/: README.md  main.py
examples/python/line-movement-chart/: README.md  main.py
examples/python/positive-ev-scanner/: README.md  main.py
mcp-server/: README.md  package.json  tsconfig.json
mcp-server/src/: index.ts
mcp-server/test/: server.test.mjs
postman/: odds-api.postman_collection.json
scripts/: smoke_examples.mjs
sdks/python/: README.md  pyproject.toml
sdks/python/src/odds_api/: __init__.py  client.py
sdks/python/tests/: test_client.py
sdks/typescript/: package.json  tsconfig.json
sdks/typescript/src/: index.ts  mock.ts
sdks/typescript/test/: client.test.mjs
