[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odds-api-client"
version = "0.1.0"
description = "Python SDK for the Odds API."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Odds API" }]
keywords = ["odds", "sports-betting", "racing", "openapi", "sdk"]

[project.urls]
Homepage = "https://odds-api.net"
Repository = "https://github.com/odds-api/odds-api"
Issues = "https://github.com/odds-api/odds-api/issues"

[tool.setuptools.packages.find]
where = ["src"]
